public class Mountain 
{
    public Mountain() {}
    public void collapse()
    {
        System.out.println("mountain collapse");
    }    
}