
public class Pangolin extends Creature
{
    public Pangolin()
    {
        name = "pangolin";
        health = 50;
        attack = 15;
        defense = 15;
        speed = 3;
    }
}