public class Treasure
{
    String name;
}